<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Main Section -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_bookings"
            android:title="@string/nav_my_bookings"
            android:icon="@drawable/ic_booking"/>
        <item
            android:id="@+id/nav_roommates"
            android:title="Find Roommate"
            android:icon="@drawable/ic_people"/>

    </group>

    <!-- Secondary Section -->
    <group>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings"/>

        <item
            android:id="@+id/nav_help"
            android:title="@string/nav_help_support"
            android:icon="@drawable/ic_help"/>

    </group>

    <!-- Logout -->
    <group>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_logout"/>
    </group>

</menu>